--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:8.0
@@ -11,12 +9,13 @@ services:
       MYSQL_USER: my_user
       MYSQL_PASSWORD: my_password
     volumes:
-      - db_data:/var/lib/mysql
-      - ./mysql:/docker-entrypoint-initdb.d
+      - ~/clinic-project/mysql_data:/var/lib/mysql
+      - ~/clinic-project/mysql:/docker-entrypoint-initdb.d
     ports:
-      - "3306:3306" # map พอร์ต 3306 ของ Host ไปยังพอร์ต 3306 ของ Container
+      - "3306:3306"
+
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin/phpmyadmin:latest
     container_name: phpmyadmin-container
     restart: always
     ports:
@@ -24,6 +23,6 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: rootpassword
-
-volumes:
-  db_data:
+    depends_on:
+      - db
+    platform: linux/amd64   # ต้องใช้ emulation บน Apple Silicon
