--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mockdate": "^3.0.5",
     "mysql2": "^3.14.2",
     "pdfkit": "^0.17.2"
   },
